--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+	background-color:  rgba(16, 64, 13, 0.5);
+}
+
 .bg-cover {
 	background-size: cover !important;
 	background-color: #10400d;
@@ -7,11 +11,6 @@
 	background-size: cover;
 	min-height: 100vh;
 
-}
-
-.page-holder {
-	/*background-color:  rgba(16, 64, 13, 0.7);*/
-	min-height: 100%;
 }
 
 .header {
@@ -43,6 +42,7 @@
 	background-color:  rgba(7, 52, 4, 0.8);
 	position: fixed;
 	height: 80vh;
+	/*width: auto;*/
 	overflow-y: scroll;
 	padding-bottom: 200px;
 }
@@ -51,7 +51,7 @@
 	padding-top:  20px;
 }
 
-p {
+p, h4 {
 	color:  #FFFFFF;
 }
 
@@ -61,4 +61,8 @@ a {
 
 a:hover {
 	color: #3A9AC9;
+}
+
+@media (prefers-color-scheme: dark) {
+
 }
