Revert "clean up"
This reverts commit f8b5b46d3cccc26b1134b46136389f4872488e50.

--- a/css/style.css
+++ b/css/style.css
@@ -20,16 +20,12 @@ body {
 	padding-bottom: 30px;
 }
 
-#scroll_dropmenu {
-	min-width: 300px;
-}
-
-.scroll_row {
+.scroll-row {
 	background-color:  rgba(7, 52, 4, 0.8);
 	min-height: 0; /* to enable flex on firefox */
 }
 
-.scroll_column {
+.scroll-column {
 	overflow-y: auto;
 }
 
@@ -64,8 +60,4 @@ a {
 
 a:hover {
 	color: #3A9AC9;
-}
-
-img {
-	max-width: 100%;
 }
