--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 	background-color:  rgba(16, 64, 13, 0.5);
 	color: #FFFFFF;
 	padding-top: 10px;
-	padding-bottom: 30px;
+	padding-bottom: 20px;
 }
 
 #scroll_dropmenu {
@@ -59,7 +59,7 @@ h4 {
 }
 
 
-p, h4 {
+p, h2, h4 {
 	color:  #FFFFFF;
 }
 
