--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body {
 	background: url("../css/bg-small.png") no-repeat center fixed;
 }
 
+#main {
+	max-width: 800px;
+}
+
 .header {
 	background-color:  rgba(16, 64, 13, 0.5);
 	color: #FFFFFF;
