--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 
 .dropdown-menu {
 	max-height: 200px;
-    overflow-y: auto;
+  overflow-y: auto;
 }
 
 #scroll_dropmenu {
@@ -40,6 +40,7 @@ body {
 
 #scroll_column {
 	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .column-1 { font-weight:bold; }
