--- a/css/style.css
+++ b/css/style.css
@@ -1,87 +1,110 @@
 html {
 	height:  100%;
+	scroll-behavior: smooth;
 }
 
 body {
-	background-color:  rgba(16, 64, 13, 1);
-	height:  100%;
-	overflow: hidden;
-}
-
-.bg-cover {
-	background-size: cover !important;
+	background-color: rgba(16, 64, 13, 1);
+	height: 100%;
 	background: url("../css/bg-xsmall.png") no-repeat center fixed;
+	background-size: cover !important;
 }
 
-#main {
-	max-width: 800px;
-}
-
-.header {
+/* Header */
+header {
 	background-color:  rgba(16, 64, 13, 0.5);
 	color: #FFFFFF;
-	padding-top: 10px;
-	padding-bottom: 20px;
 }
-
-.dropdown-menu {
-	max-height: 200px;
-  overflow-y: auto;
-}
-
-#scroll_dropmenu {
-	min-width: 300px;
-}
-
-#scroll_row {
-	background-color:  rgba(7, 52, 4, 0.8);
-	min-height: 0; /* to enable flex on firefox */
-}
-
-#scroll_column {
-	overflow-y: auto;
-	overflow-x: hidden;
-}
-
-.column-1 { font-weight:bold; }
-.column-2, .column-3, .column-4, .column-5 { text-align:right; }
-
-.footer {
-	background-color:  rgba(7, 52, 4, 0.8);
-	color: #FFFFFF;
-}
-
 #img-logo {
 	max-width: 300px;
 }
-
 #img-crest {
 	max-width: 80px;
 }
 
-#button_section {
+/* Navbar */
+nav {
+	margin-bottom: 20px;
+}
+nav.active-sticky {
+	background-color: rgba(7, 52, 4, 0.8);
+	padding-bottom: 10px;
+}
+#button-section {
 	min-width: 300px;
 }
+#scroll-dropmenu {
+	min-width: 300px;
+	max-height: 200px;
+  overflow-y: auto;
+}
+#js-top a {
+	color: #FFFFFF;
+	font-size: 30px;
+}
 
+/* Scrollable content */
+#main {
+	max-width: 800px;
+}
+/* Allow buffer so we don't scroll anchor links behind navbar */
+.article-href {
+	display: block;
+  margin-top: -100px;
+  padding-top: 100px;
+}
+#scroll-container {
+	background-color:  rgba(7, 52, 4, 0.8);
+}
+
+/* Table content */
+.column-1 { 
+	font-weight:bold; 
+}
+.column-2, .column-3, .column-4, .column-5 { 
+	text-align:right; 
+}
+
+/* Content formatting */
 h2 {
 	padding-bottom: 10px;
 }
-
 h4 {
 	padding-top: 5px;
 }
-
-
 p, h2, h4 {
 	color:  #FFFFFF;
 }
-
-a {
-	color: #bcdce9;
+hr.divider {
+  border-bottom: 1px solid #009f4d;
+  margin: 50px;
 }
 
-a:hover {
+#scroll-content a {
+	color: #bcdce9;
+}
+#scroll-content a:hover {
 	color: #88ebb2;
+}
+
+/* AnchorJS */
+.anchorjs-link:hover {
+  color: #2500ad;
+}
+*:hover > .anchorjs-link {
+  transition: color .25s linear;
+}
+.anchorjs-link {
+	text-decoration: none !important;
+}
+
+@media screen and (max-width: 600px) {
+  table {
+    font-size: 12px;
+  }
+  table {
+  	word-wrap:break-word;
+  }
 }
 
 .img-max {
@@ -90,13 +113,7 @@ a:hover {
 	margin-left:20px;
 }
 
-hr.divider {
-  border-bottom: 1px solid #009f4d;
-  margin: 50px;
-}
-
-@media screen and (max-width: 600px) {
-  table {
-    font-size: 10px;
-  }
+.footer {
+	background-color:  rgba(7, 52, 4, 1);
+	color: #FFFFFF;
 }
