Add content padding

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,9 @@ hr.divider {
   border-bottom: 1px solid #009f4d;
   margin: 50px;
 }
-
+#scroll-content {
+	padding: 20px 10px 10px 10px;
+}
 #scroll-content a {
 	color: #bcdce9;
 }
