--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html {
 	height:  100%;
-	scroll-behavior: smooth;
+	/*scroll-behavior: smooth;*/
 }
 body {
 	background-color: rgba(16, 64, 13, 1);
