--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html {
 	height:  100%;
-	/*scroll-behavior: smooth;*/
+	scroll-behavior: smooth;
 	scroll-padding-top: 100px; /* Allow buffer so we don't scroll anchor links behind navbar */
 }
 body {
