--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ body {
 }
 #main {
     max-width: 800px;
-    margin: 0 auto; /* center non-container */
 }
 
 /* Header */
@@ -60,7 +59,6 @@ nav.active-sticky {
 }
 
 /* Scrollable content */
-
 /* Content formatting */
 h2 {
     padding-bottom: 10px;
@@ -114,19 +112,22 @@ p, h2, h4 {
 }
 
 @media screen and (max-width: 600px) {
+    .container {
+        width:100%;
+        padding: 0;
+    }
+    #scroll-content {
+        padding: 40px 10px 20px;
+    }
     table {
         font-size: 12px;
     }
     table th {
         word-wrap:break-word;
     }
-
-    #scroll-content {
-        padding: 40px 10px 20px;
-    }
 }
 
 footer {
-    background-color:  rgba(7, 52, 4, 1);
+    background-color: rgba(7, 52, 4, 1);
     color: #FFFFFF;
 }
