--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ body {
     height: 100vh;
     width: 100vw;
 }
+.bg-color {
+    background-color: rgba(16, 64, 13, 0.5);
+    height: 100%;
+}
 
 /* Allows bg-cover div to be fixed */
 .content { 
@@ -80,7 +84,7 @@ p, h2, h4 {
 
 #scroll-content {
     padding: 40px 20px 20px;
-    background-color:  rgba(7, 52, 4, 0.8);
+    background-color:  rgba(7, 52, 4, 0.6);
 }
 #scroll-content a {
     color: #bcdce9;
