--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html {
     height:  100%;
     scroll-behavior: smooth;
     scroll-padding-top: 100px; /* Allow buffer so we don't scroll anchor links behind navbar */
+    overflow-y: scroll;
 }
 body {
     background-color: rgba(16, 64, 13, 1);
