--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html {
     height:  100%;
     scroll-behavior: smooth;
     scroll-padding-top: 100px; /* Allow buffer so we don't scroll anchor links behind navbar */
+    overflow-y: scroll;
 }
 body {
     background-color: rgba(16, 64, 13, 1);
@@ -12,7 +13,7 @@ body {
     background-size: cover !important;
     position: fixed;
     height: 100vh;
-    width: 100vw;
+    width: 99.5vw; /* Adjust for perma-scrollbar */
 }
 .bg-color {
     background-color: rgba(16, 64, 13, 0.5);
@@ -82,29 +83,29 @@ p, h2, h4 {
     text-align:right; 
 }
 
-#scroll-content {
+section {
     padding: 40px 20px 20px;
     background-color:  rgba(7, 52, 4, 0.6);
 }
-#scroll-content a {
+section a {
     color: #bcdce9;
 }
-#scroll-content a:hover {
+section a:hover {
     color: #88ebb2;
 }
-#scroll-content hr.divider {
+section hr.divider {
     border-bottom: 1px solid #009f4d;
     margin: 40px;
 }
 
-/* scroll-content: Lightbox */
+/* section: Lightbox */
 .img-max {
     max-width:50%; 
     float:right; 
     margin-left:20px;
 }
 
-/* scroll-content: AnchorJS */
+/* section: AnchorJS */
 .anchorjs-link:hover {
     color: #2500ad;
 }
@@ -120,7 +121,7 @@ p, h2, h4 {
         width:100%;
         padding: 0;
     }
-    #scroll-content {
+    section {
         padding: 40px 10px 20px;
     }
     table {
