--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,6 @@ body {
     position: absolute;
     width: 100%;
 }
-section {
-    background-color: rgba(7, 52, 4, 0.6);
-}
 .main {
     max-width: 810px;
 }
@@ -71,6 +68,9 @@ nav.active-sticky {
 
 /* Scrollable content */
 /* Content formatting */
+section {
+    background-color: rgba(7, 52, 4, 0.6);
+}
 h2 {
     padding-bottom: 10px;
 }
@@ -111,6 +111,10 @@ figure, .img-max {
 }
 figcaption {
     color: #d7f0cc !important;
+}
+/* remove frame padding */
+.ekko-lightbox .modal-body { 
+    padding: 0px !important;
 }
 
 /* scroll-content: AnchorJS */
