--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,11 @@ h2 {
 h4 {
     padding-top: 5px;
 }
-p, h2, h4 {
+p, h1, h2, h3, h4 {
     color:  #FFFFFF;
+}
+h5, h6 {
+    color: #d7f0cc;
 }
 
 /* Table content */
@@ -108,6 +111,7 @@ figure, .img-max {
     max-width:50%; 
     float:right; 
     margin-left:20px;
+    margin-bottom: 10px;
 }
 figcaption {
     color: #d7f0cc !important;
