--- a/css/style.css
+++ b/css/style.css
@@ -1,151 +1,228 @@
-html {
-    height:  100%;
-    scroll-behavior: smooth;
-    scroll-padding-top: 60px; /* Allow buffer so we don't scroll anchor links behind navbar */
-    overflow-y: scroll;
-}
-body {
-    background-color: rgba(16, 64, 13, 1);
-    height: 100%;
-}
-.bg-cover {
-    background: url("../css/bg-xsmall.png") no-repeat center;
-    background-size: cover !important;
-    position: fixed;
-    height: 100vh;
-    width: 99.5vw; /* Adjust for perma-scroll */
-}
-.bg-color {
-    background-color: rgba(16, 64, 13, 0.5);
-    height: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Philosopher:ital,wght@0,400;0,700;1,400&display=swap');
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    color: #fdf5d9;
+    font-family: "Mulish", Arial, Helvetica, sans-serif;
+    font-weight: 400;
 }
 
-/* Allows bg-cover div to be fixed */
-.content { 
-    position: absolute;
-    width: 100%;
+.red {
+    background-color: red;
 }
-.main {
-    max-width: 810px;
+.green {
+    background-color: green;
 }
-
-/* Header */
-header {
-    background-color: rgba(16, 64, 13, 0.5);
-    color: #FFFFFF;
-}
-#img-logo {
-    max-width: 300px;
-}
-#img-crest {
-    max-width: 80px;
+.blue {
+    background-color: blue;
 }
 
-/* Navbar */
-nav {
-    background-color: rgba(16, 64, 13, 0.5);
-    margin-bottom: 20px;
-    padding-bottom: 10px;
+h1,
+h2,
+h3,
+h4 {
+    color: #d4c374;/*#d4ceb2;*/
+    font-family: "Philosopher", Georgia, "Times New Roman", Times, serif;
 }
-nav.active-sticky {
-    background-color: rgba(7, 52, 4, 0.8);
-    /*padding-bottom: 10px; buggy with anchor scrolling*/
-}
-#button-section {
-    min-width: 280px;
-}
-#scroll-dropmenu {
-    min-width: 280px;
-    max-height: 200px;
-    overflow-y: auto;
-}
-.js-top {
-    display: none;
-}
-#js-top a {
-    color: #FFFFFF;
-    font-size: 30px;
-}
-
-/* Scrollable content */
-/* Content formatting */
-section {
-    background-color: rgba(7, 52, 4, 0.6);
+h1 {
+    font-weight: 700;
 }
 h2 {
     padding-bottom: 10px;
 }
 h4 {
-    padding-top: 5px;
-}
-p, ul, ol, h1, h2, h3, h4 {
-    color:  #FFFFFF;
+    padding-top: 10px;
+    padding-bottom: 3px;
 }
 h5, h6 {
     color: #d7f0cc;
 }
 
-/* Table content */
-.column-1 { 
-    font-weight:bold; 
-}
-.column-2, .column-3, .column-4, .column-5 { 
-    text-align:right; 
-}
-
-#scroll-content {
-    padding: 40px 20px 20px;
-}
-#scroll-content a {
-    color: #bcdce9;
-}
-#scroll-content a:hover {
-    color: #88ebb2;
-}
-#scroll-content hr.divider {
-    border-bottom: 1px solid #009f4d;
-    margin: 40px;
+/*
+    Fake highlight on clickables
+*/
+button:hover,
+button:active,
+a[role=button]:hover,
+a[role=button]:active,
+input[type=submit]:hover,
+input[type=submit]:active,
+input[type=reset]:hover,
+input[type=reset]:active {
+    cursor: pointer;
+    box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
 }
 
-/* scroll-content: Lightbox */
-figure, .img-max {
-    max-width:50%; 
-    float:right; 
-    margin-left:20px;
+
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 70px; /* Allow buffer so we don't scroll anchor links behind navbar */
+}
+html,
+body {
+    height: 100%;
+}
+body {
+    background-image: linear-gradient(to bottom, rgba(18, 114, 34, 0.1), rgba(28, 103, 88, 0.2)),
+                      url("../images/bg-xsmall.webp");
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+/* BS5 Lightbox */
+body.modal-open {
+    overflow-y: auto !important; /* Prevent Lightbox from hiding the scroll */
+    padding-right: 0 !important;
+}
+
+/*
+    Header
+*/
+header h1 {
+    font-size: 3.5rem;
+    font-weight: 400;
+    color: #BFCBA8;
+}
+header hr {
+    width: 300px;
+}
+header img {
+    height: auto;
+    width: 150px;
+}
+/* 
+    Navbar 
+*/
+header,
+nav {
+    background-color: rgba(7, 56, 2, 0.3);
+}
+nav.sticky {
+    background-color: rgba(7, 52, 4, 0.8);
+}
+nav.sticky .js-top {
+    display: block;
+}
+nav .js-top {
+    display: none;
+}
+.js-top a {
+    font-size: 1.8rem;
+    position: absolute;
+    right: 15px;
+}
+.js-top a,
+.js-top a:hover,
+.js-top a:active,
+.js-top a:link,
+.js-top a:visited {
+    color: #fff;
+    box-shadow: none;
+}
+/*
+    Section button and dropdown
+*/
+nav button,
+nav .dropdown-menu {
+    width: 280px;
+}
+nav .dropdown-menu {
+    max-height: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    font-size: 0.9rem;
+}
+
+
+/* 
+    Scrollable content
+    Content formatting
+*/
+#content section {
+    padding: 5px 0;
+}
+#content {
+    background-color: rgba(4, 41, 2, 0.6);
+}
+/* Written by */
+#content h4 + p > span[author] {
+    font-size: 0.9rem;
+    color: #dbc046;/*#e9d26a; /*#f0ce39*/
+}
+#content a {
+    color: #e6dbb1;
+}
+#content a:hover,
+#content a:active {
+    color: #fffae6;
+}
+
+#content .anchorjs-link {
+    color: #42a86c;
+}
+#content .anchorjs-link:hover,
+#content .anchorjs-link:active {
+    color: #61db94;
+}
+#content hr {
+    border-top: none;
+    border-bottom: 2px solid #009f4d;
+    /*margin: 30px 0;*/
+}
+#content .img-max {
+    max-width: 50%; 
+    float: right; 
+    margin-left: 20px;
     margin-bottom: 10px;
 }
-figcaption {
-    color: #d7f0cc !important;
+
+/* 
+    Table content 
+*/
+#content .table-wrapper {
+    overflow: hidden;
+    overflow-x: auto;
 }
-/* remove frame padding */
-.ekko-lightbox .modal-body { 
-    padding: 0px !important;
+#content table {
+    font-size: 0.9rem;
+    background-color: rgba(4, 75, 33, 0.3);
+    border: none;
+}
+#content th {
+    background-color: #075c2a;
+    font-weight: 600;
+}
+#content tr:nth-child(even) {
+    background-color: rgba(214, 238, 238, 0.05);
+  }
+#content th, td {
+    padding: 5px;
+}
+.column-1 {
+    font-weight: bold; 
+}
+.column-2, 
+.column-3, 
+.column-4, 
+.column-5 { 
+    text-align: right; 
 }
 
-/* scroll-content: AnchorJS */
-.anchorjs-link:hover {
-    color: #2500ad;
+
+footer > div:first-child {
+    background-color: rgb(5, 41, 3);
+    color: #EEF2E6;
 }
-*:hover > .anchorjs-link {
-    transition: color .25s linear;
-}
-.anchorjs-link {
-    text-decoration: none !important;
-}
+
 
 @media screen and (max-width: 600px) {
-    #scroll-content {
-        padding: 40px 10px 20px;
-    }
     table {
         font-size: 12px;
     }
     table th {
         word-wrap:break-word;
     }
-}
-
-footer {
-    background-color: rgba(7, 52, 4, 1);
-    color: #FFFFFF;
 }
