--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ h5, h6 {
 /*
     Fake highlight on clickables
 */
+/*
 button:hover,
 button:active,
 a[role=button]:hover,
@@ -55,6 +56,7 @@ input[type=reset]:active {
     cursor: pointer;
     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
 }
+*/
 
 
 html {
