--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ h5, h6 {
 /*
     Fake highlight on clickables
 */
-/*
+
 button:hover,
 button:active,
 a[role=button]:hover,
@@ -56,7 +56,7 @@ input[type=reset]:active {
     cursor: pointer;
     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
 }
-*/
+
 
 
 html {
@@ -75,11 +75,17 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+body > div:first-child {
+    overflow-y: auto;
+}
 /* BS5 Lightbox */
+/* Prevent Lightbox from hiding the scroll */
+/*
 body.modal-open {
-    overflow-y: auto !important; /* Prevent Lightbox from hiding the scroll */
+    overflow-y: auto !important;
     padding-right: 0 !important;
 }
+*/
 
 /*
     Header
@@ -173,7 +179,6 @@ nav .dropdown-menu {
 #content hr {
     border-top: none;
     border-bottom: 2px solid #009f4d;
-    /*margin: 30px 0;*/
 }
 #content .img-max {
     max-width: 50%; 
